--- a/alecture/package.json
+++ b/alecture/package.json
@@ -1,21 +1,20 @@
 {
   "name": "alecture",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --env development",
     "build": "cross-env NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "ZeroCho",
+  "author": "Hunee",
   "license": "MIT",
   "dependencies": {
     "@emotion/babel-plugin": "^11.2.0",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@loadable/component": "^5.14.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@loadable/component": "^5.15.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/gravatar": "^1.8.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -30,8 +29,8 @@
     "react-dom": "^17.0.1",
     "react-mentions": "^4.1.1",
     "react-refresh": "^0.9.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "react-toastify": "^7.0.3",
     "regexify-string": "^1.0.5",
     "socket.io-client": "^2.4.0",
@@ -48,12 +47,12 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.16",
     "@types/autosize": "^3.0.7",
-    "@types/loadable__component": "^5.13.3",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^14.14.28",
     "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-mentions": "^4.1.0",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3",
     "@types/socket.io-client": "^1.4.35",
     "@types/webpack": "^4.41.26",
     "@types/webpack-bundle-analyzer": "^3.9.1",
@@ -70,6 +69,7 @@
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "prettier": "^2.2.1",
     "webpack": "^5.22.0",
-    "webpack-dev-server": "^4.10.1"
-  }
+    "webpack-dev-server": "^4.11.1"
+  },
+  "description": ""
 }
